--- a/_posts/core-samples/2012-07-19-3rd.md
+++ b/_posts/core-samples/2012-07-19-3rd.md
@@ -2,12 +2,12 @@
 layout: post
 title: 3rd-meeting around Hong-Ik Univ.
 --- 
-## TODO
+### TODO
 	1. github 협업 숙지하기
 	2. 내일 워크샵 준비
 
 
-## WE DID
+### WE DID
 	1. The Hard Way 각자 발표
 	2. PHP Parsing 비교
 	3. Python, dir(), help()를 잘 쓰자 !!
