--- a/_posts/core-samples/2012-07-25-4th.md
+++ b/_posts/core-samples/2012-07-25-4th.md
@@ -2,14 +2,14 @@
 layout: post
 title: 4th-meeting in the SW Maestro Center
 --- 
-## TODO
+### TODO
 	1. github page 만들기 (길우)
 	2. Issue Tracker 선택 (신협)
 	3. 방학 전 카드 빌리기 (아윤)
 	4. The Expert Python 각자 읽기
 
 
-## WE DID
+### WE DID
 	1. git 협업과 Issue Tracker 사용 예제
 	2. The Hard Way 부분 중 Module, Class, Instance ..
 	3. 조엘 테스트에 대하여
