updated blog page

--- a/_posts/2012-07-27-5th.md
+++ b/_posts/2012-07-27-5th.md
@@ -4,9 +4,9 @@ title: 5th-meeting in the SW Maestro Center
 ---
 ### TODO
 	1. Read The Expert Python a lot
-	2. Make github page 'Choi'
-	3. Present Issue Tracker 'Kim'
-	4. Select next meeting place 'Park'
+	2. Make github page [Choi]
+	3. Present Issue Tracker [Kim]
+	4. Select next meeting place [Park]
 	5. Next meeting will talk about django
 
 ### WE DID
