--- a/_posts/2012-07-30-6th.md
+++ b/_posts/2012-07-30-6th.md
@@ -11,8 +11,8 @@ tags: []
 	2. Present again Issue tracker and blog page
 
 ### WE DID
-	1. Present about Issue Tracker - Pivotal 'Kim'
-	2. Explain for Jekyll 'Choi'
+	1. Present about Issue Tracker - Pivotal [Kim]
+	2. Explain for Jekyll [Choi]
 	3. Know the foundation of django (Request, Response)
 
 ### OPINION
