fix some typing error about 8th meeting

--- a/_posts/2012-08-06-8th.md
+++ b/_posts/2012-08-06-8th.md
@@ -7,7 +7,7 @@ tags: []
 ---
 {% include JB/setup %}
 
-## Today"'"s Objective
+## Today's Objective
 ---
 Design our Service!
 
@@ -20,7 +20,7 @@ Design our Service!
 
 ## RESULTS
 ---
-[DOCUMENT] 
+[Document of Today's Meeting] on google docs
 
 
-[DOCUMENT]: http://developer.android.com/reference/java/lang/OutOfMemoryError.html 
+[DOCUMENT]: https://docs.google.com/document/d/1UXFXS4bbkfRWpzhrGkk6dIQwBxE4D7qs5BIpFMVCLqA/edit
