fix typing errors

--- a/_posts/2012-08-09-9th.md
+++ b/_posts/2012-08-09-9th.md
@@ -7,31 +7,31 @@ tags: []
 ---
 {% include JB/setup %}
 
-### Today's Objective
+# Today's Objective
 ---
-#Introducing about Amazone WebService and Memcached/Redis
+##Introducing about Amazone WebService and Memcached/Redis
 
-### WHAT WE DID
+# WHAT WE DID
 ---
 ## Why we use Amazone WebService
-# Simply deploy our service via Amazone WebService
-# Cost effective
+### Simply deploy our service via Amazone WebService
+### Cost effective
 ## But
-# There is no Amazon IDC, so network latency is a problem can't be solved.
+### There is no Amazon IDC, so network latency is a problem can't be solved.
 
 ##Amazone WebService
-# S3 (Simple Storage Server)
+### S3 (Simple Storage Server)
 1. object storage
 2. Supported operation : WRITE, READ, DELETE (CAN NOT MODIFY)
 3. Object : image, file, **VM snapshot or something
 4. 99.999% of availability.
 5. Web API is available.
 
-# EC2
+### EC2
 1. kind of VM
 2. 시간당 과금
 
-# EBS (Elastic Block Store)
+### EBS (Elastic Block Store)
 1. kind of network hard disk
 2. can be used with EC2 instance.
 
@@ -40,7 +40,7 @@ tags: []
 2. developed by Netflix
 3. Amazone API Elastic Load Balancing solution
 
-### RESULTS
+# RESULTS
 ---
 
 
