--- a/_posts/2012-08-09-9th.md
+++ b/_posts/2012-08-09-9th.md
@@ -11,6 +11,8 @@ tags: []
 ---
 ##Introducing about Amazone WebService and Memcached/Redis
 
+
+
 # WHAT WE DID
 ---
 ## Why we use Amazone WebService
@@ -18,6 +20,7 @@ tags: []
 ### Cost effective
 ## But
 ### There is no Amazon IDC, so network latency is a problem can't be solved.
+
 
 ##Amazone WebService
 ### S3 (Simple Storage Server)
@@ -27,18 +30,23 @@ tags: []
 4. 99.999% of availability.
 5. Web API is available.
 
+
 ### EC2
 1. kind of VM
 2. 시간당 과금
+
 
 ### EBS (Elastic Block Store)
 1. kind of network hard disk
 2. can be used with EC2 instance.
 
-# Asgard (Elastic Load Balancing Solution)
+
+### Asgard (Elastic Load Balancing Solution)
 1. netflix.github.com/asgard
 2. developed by Netflix
 3. Amazone API Elastic Load Balancing solution
+
+
 
 # RESULTS
 ---
