why doesnt work

--- a/_posts/2012-08-09-9th.md
+++ b/_posts/2012-08-09-9th.md
@@ -9,17 +9,17 @@ tags: []
 
 # Today's Objective
 ---
-##Introducing about Amazone WebService and Memcached/Redis
+1.Introducing about Amazone WebService and Memcached/Redis
 
 
 
 # WHAT WE DID
 ---
 ## Why we use Amazone WebService
-### Simply deploy our service via Amazone WebService
-### Cost effective
+1.Simply deploy our service via Amazone WebService
+2. Cost effective
 ## But
-### There is no Amazon IDC, so network latency is a problem can't be solved.
+1. There is no Amazon IDC, so network latency is a problem can't be solved.
 
 
 ##Amazone WebService
