--- a/_posts/2012-08-09-9th.md
+++ b/_posts/2012-08-09-9th.md
@@ -7,47 +7,47 @@ tags: []
 ---
 {% include JB/setup %}
 
-# Today's Objective
+## Today's Objective
 ---
 1.Introducing about Amazone WebService and Memcached/Redis
 
-
-# WHAT WE DID
 ---
-## Why we use Amazone WebService
-1.Simply deploy our service via Amazone WebService
-2. Cost effective
-## But
-1. There is no Amazon IDC, so network latency is a problem can't be solved.
+## WHAT WE DID
+---
+### Why we use Amazone WebService
+    1.Simply deploy our service via Amazone WebService
+    2. Cost effective
+### But
+    1. There is no Amazon IDC, so network latency is a problem can't be solved.
+---
+
+### Amazone WebService
+* S3 (Simple Storage Server)
+    1. object storage
+    2. Supported operation : WRITE, READ, DELETE (CAN NOT MODIFY)
+    3. Object : image, file, **VM snapshot or something
+    4. 99.999% of availability.
+    5. Web API is available.
 
 
-##Amazone WebService
-### S3 (Simple Storage Server)
-1. object storage
-2. Supported operation : WRITE, READ, DELETE (CAN NOT MODIFY)
-3. Object : image, file, **VM snapshot or something
-4. 99.999% of availability.
-5. Web API is available.
+* EC2
+    1. kind of VM
+    2. 시간당 과금
 
 
-### EC2
-1. kind of VM
-2. 시간당 과금
+* EBS (Elastic Block Store)
+    1. kind of network hard disk
+    2. can be used with EC2 instance.
 
 
-### EBS (Elastic Block Store)
-1. kind of network hard disk
-2. can be used with EC2 instance.
+* Asgard (Elastic Load Balancing Solution)
+    1. netflix.github.com/asgard
+    2. developed by Netflix
+    3. Amazone API Elastic Load Balancing solution
 
 
-### Asgard (Elastic Load Balancing Solution)
-1. netflix.github.com/asgard
-2. developed by Netflix
-3. Amazone API Elastic Load Balancing solution
-
-
-
-# RESULTS
+---
+## RESULTS
 ---
 
 
