--- a/_posts/2012-08-09-9th.md
+++ b/_posts/2012-08-09-9th.md
@@ -23,24 +23,24 @@ tags: []
 ---
 
 ### Amazone WebService
-- S3 (Simple Storage Server)
+S3 (Simple Storage Server)
         1. object storage
         2. Supported operation : WRITE, READ, DELETE (CAN NOT MODIFY)
         3. Object : image, file, **VM snapshot or something
         4. 99.999% of availability.
         5. Web API is available.
 
-- EC2
+EC2
         1. kind of VM
         2. 시간당 과금
 
 
-- EBS (Elastic Block Store)
+EBS (Elastic Block Store)
         1. kind of network hard disk
         2. can be used with EC2 instance.
 
 
-- Asgard (Elastic Load Balancing Solution)
+Asgard (Elastic Load Balancing Solution)
         1. netflix.github.com/asgard
         2. developed by Netflix
         3. Amazone API Elastic Load Balancing solution
