about memcached and redis

--- a/_posts/2012-08-09-9th.md
+++ b/_posts/2012-08-09-9th.md
@@ -45,6 +45,24 @@ tags: []
         3. Amazone API Elastic Load Balancing solution
 
 
+### Memcached
+        1. Map (Key and Value) on Memory
+        2. set/get  is two main methods
+
+### Installing Memached
+        1. brew : ruby <(curl -fsSk https://raw.github.com/mxcl/homebrew/go)
+        2. memcached deamon : brew install memcached
+        3. memcached client : pip install python-memcached
+
+### redis
+        1. atomic operation is supported.
+
+### Instaling redis
+        1. redis deamon : brew install redis
+        2. pip install redis
+        3. https://redis.io
+        
+
 ---
 ## RESULTS
 ---
