--- a/_posts/2012-08-06-8th.md
+++ b/_posts/2012-08-06-8th.md
@@ -23,4 +23,4 @@ Design our Service!
 [Document of Today's Meeting] on google docs
 
 
-[DOCUMENT]: https://docs.google.com/document/d/1UXFXS4bbkfRWpzhrGkk6dIQwBxE4D7qs5BIpFMVCLqA/edit
+[Document of Today's Meeting]: https://docs.google.com/document/d/1UXFXS4bbkfRWpzhrGkk6dIQwBxE4D7qs5BIpFMVCLqA/edit
