correct 2012-08-23-14th.md

--- a/_posts/2012-08-23-14th.md
+++ b/_posts/2012-08-23-14th.md
@@ -7,7 +7,7 @@ tags: []
 ---
 {% include JB/setup %}
 ### TODO
-	1. Define url.py(admins) and research how to mango logging [KIM]
+	1. Define url.py(admins) and research how to jango logging [KIM]
 	2. Define url.py(post, timeline), Make a ppt how to use Jango Debuger toolbar and Update timeline model [PARK]
 	3. Define url.py(accounts), Consider how to design message and Make a fixture[CHOI]
 
